--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>helloWorld!</h1>
+    <br>
+    <h1 href="exercise.html">Exercise 1: Carldair Essay</h1>
     
 </body>
 </html>
