--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>helloWorld!</h1>
+    <h1>HelloWorld!</h1>
     <br>
-    <h1 href="exercise.html">Exercise 1: Carldair Essay</h1>
+    <a href="exercise1/exercise.html"><h2>Exercise 3: Carldair Essay</h2></a>
+    <a href="Interview /interview.html"><h2>Exercise 4: Interview </h2></a>
     
 </body>
 </html>
