--- a/exercise1/exercise.html
+++ b/exercise1/exercise.html
@@ -5,15 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        body {margin-left:30%;margin-right: 30%}
-        h1   {font-family:sans-serif;color:black; font-size: 20pt;}
-        h2   {font-family:sans-serif;color:black; font-size: 10pt;}
-        h3   {font-family:sans-serif;color:black; font-size: 15pt;}
-        h4   {font-family:sans-serif;color:black; font-size: 10pt;}
-        p    {font-family:sans-serif; color:grey; font-size: 10pt;}
-       
-        </style>
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
  
 </head>
 <body>
