--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="exercise1/exercise.html"><h2>Exercise 3: Carldair Essay</h2></a>
     <a href="Interview /interview.html"><h2>Exercise 4: Interview </h2></a>
     <a href="letterform/letterform.html"><h2>Exercise 5: CSSletter </h2></a>
+    <a href="Project2/index.html"><h2>Gan's Diary </h2></a>
     
 </body>
 </html>
