--- a/Project2/index.html
+++ b/Project2/index.html
@@ -375,6 +375,21 @@
             font-family: 'web';
             font-size: 40pt;
             color: white;
+            animation-name: h3enter;
+            padding-top: 20px;
+            animation-duration: 1s;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease-out;
+        }
+
+        @keyframes h3enter {
+            0%{
+                opacity: 0;
+            padding-top: 20px;
+            }
+            100%{opacity: 100;
+                padding-top: 0px;}
+            
         }
 
         .background {
