--- a/Project3/about.html
+++ b/Project3/about.html
@@ -10,8 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
         integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
    
-    <h1>About</h1>
-    <p>Bank of gazing stores your wasted attention and you can withdraw your attention in the future</p>
+    <div id="banktitle"><h1>About</h1></div>
+    <div><p style="font-size: 30px; width: 70%; margin: auto;">Anthropologists and sociologists have predicted that human attention will become the future currency in the post-internet era. As a response to the increasing concern for the inflation of attention value after the future population explosion, Bank of Gazing is founded. It aims to store and your current extra attention and maintain its value. <u>We promise that your precious gaze will be redeemed at a fair price in the future.</u> </p></div>
 
     <div id="GoBack">
         <p>Back</p>
