--- a/Project3/index.html
+++ b/Project3/index.html
@@ -23,7 +23,7 @@
         <p><u>281302</u> People Has <br>Stored <u>132233</u> Minutes Here Which Networth $<u>283102</u> in Total</p>
     </div>
     <div id="calibrationdescription" class="calibrationpage">
-        <p>Calibrate Your Gaze Before Depositing</p>
+        <p>Calibrate Your Gaze Before Depositing: Stare at Each of These Dots and Click</p>
     </div>
     <div id="nottrackingsign">
         Your Eyes Are Not Tracked !
